--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "testEnvironment": "jsdom",
     "transform": {
       "\\.[jt]sx?$": "ts-jest",
-      "^.+\\.svg$": "<rootDir>/lib/jest/svgTransformer.js"
+      "^.+\\.svg$": "jest-transformer-svg"
     },
     "setupFilesAfterEnv": [
       "<rootDir>/src/setupTests.js"
